# FanCo

./: .gitignore  README.md
FanRegulator_v01/FanRegulator_v01/src/: config.h  interrupts.c  interrupts.h  main.c  pid.c  pid.h  pwm.c  usiTwiSlave.c  usiTwiSlave.h
circuits/slave/: FanManager.brd  FanManager.sch
programs/backend/: api.py  requirements.txt
programs/fancoui/: Fan.cpp  config.h  encoder.cpp  encoder.h  fan.h  fanco.pro  global.cpp  global.h  info.cpp  info.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  popup.cpp  popup.h  style.qrc
programs/fancoui/Resources/styles/: default.qss
programs/frontend/: index.html  info.html  install.txt  main.js  package.json  renderer.js  style.css
programs/frontend/design/: design.xd
programs/slave/FanRegulator_v01/: CMakeLists.txt
programs/slave/FanRegulator_v01/include/: config.h  main.h  pid.h  pwm.h
programs/slave/FanRegulator_v01/src/: config.h  interrupts.c  interrupts.h  main.c  pid.c  pid.h  pwm.c  pwm.h  usiTwiSlave.c
programs/step_response/: step_response.py
